1.处理设备离线问题